[gd_scene load_steps=9 format=2]

[ext_resource path="res://tileset_map.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Mobile/MainUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Mobile/Field.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -32, 112, 0, 0, 0, 0, 432, 112, 0, 0, 0, 0, 456, 104, 0, 0, 0, 0, 472, 104, 0, 0, 0, 0, 496, 112, 0, 0, 0, 0, 784, 112, 0, 0, 0, 0, 784, 240, 0, 0, 0, 0, 848, 240, 0, 0, 0, 0, 848, 304, 0, 0, 0, 0, 1048, 304 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -32, 240, 0, 0, 0, 0, 432, 240, 0, 0, 0, 0, 456, 232, 0, 0, 0, 0, 472, 232, 0, 0, 0, 0, 496, 240, 0, 0, 0, 0, 848, 240, 0, 0, 0, 0, 848, 304, 0, 0, 0, 0, 1048, 304 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -32, 368, 0, 0, 0, 0, 432, 368, 0, 0, 0, 0, 456, 360, 0, 0, 0, 0, 472, 360, 0, 0, 0, 0, 496, 368, 0, 0, 0, 0, 848, 368, 0, 0, 0, 0, 848, 304, 0, 0, 0, 0, 1048, 304 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -32, 496, 0, 0, 0, 0, 432, 496, 0, 0, 0, 0, 456, 488, 0, 0, 0, 0, 472, 488, 0, 0, 0, 0, 496, 496, 0, 0, 0, 0, 784, 496, 0, 0, 0, 0, 784, 368, 0, 0, 0, 0, 848, 368, 0, 0, 0, 0, 848, 304, 0, 0, 0, 0, 1048, 304, 0, 0, 0, 0, 1048, 304 )
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 72, 10.8125 )

[node name="Field" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ -32.0 ]
}

[node name="Ground" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 262146, 1, 0, 262146, 2, 0, 262146, 3, 0, 262146, 4, 0, 262146, 5, 0, 262146, 6, 0, 262148, 7, 0, 262146, 8, 0, 262146, 9, 0, 262146, 10, 0, 262146, 11, 0, 262146, 12, 0, 262146, 13, 0, 262146, 14, 0, 262146, 15, 0, 262146, 16, 0, 262146, 17, 0, 262146, 18, 0, 262146, 19, 0, 262146, 20, 0, 262146, 21, 0, 262146, 22, 0, 262146, 23, 0, 262146, 24, 0, 262146, 25, 0, 262146, 26, 0, 262146, 27, 0, 262146, 28, 0, 262146, 29, 0, 262146, 30, 0, 262146, 31, 0, 262148, 65536, 0, 262146, 65537, 0, 262146, 65538, 0, 262149, 65539, 0, 262146, 65540, 0, 262146, 65541, 0, 262146, 65542, 0, 262146, 65543, 0, 262146, 65544, 0, 262146, 65545, 0, 262146, 65546, 0, 262146, 65547, 0, 262149, 65548, 0, 262146, 65549, 0, 262146, 65550, 0, 262146, 65551, 0, 262146, 65552, 0, 262146, 65553, 0, 262146, 65554, 0, 262146, 65555, 0, 262146, 65556, 0, 262146, 65557, 0, 262146, 65558, 0, 262146, 65559, 0, 262146, 65560, 0, 262146, 65561, 0, 262146, 65562, 0, 262146, 65563, 0, 262146, 65564, 0, 262146, 65565, 0, 262146, 65566, 0, 262146, 65567, 0, 262146, 131072, 0, 262146, 131073, 0, 262146, 131074, 0, 262146, 131075, 0, 262146, 131076, 0, 262146, 131077, 0, 262146, 131078, 0, 262146, 131079, 0, 262146, 131080, 0, 262146, 131081, 0, 262146, 131082, 0, 262146, 131083, 0, 262146, 131084, 0, 262146, 131085, 0, 262146, 131086, 0, 262146, 131087, 0, 262146, 131088, 0, 262146, 131089, 0, 262146, 131090, 0, 262146, 131091, 0, 262148, 131092, 0, 262146, 131093, 0, 262146, 131094, 0, 262146, 131095, 0, 262149, 131096, 0, 262146, 131097, 0, 262146, 131098, 0, 262146, 131099, 0, 262147, 131100, 0, 262146, 131101, 0, 262146, 131102, 0, 262146, 131103, 0, 262146, 196608, 0, 262146, 196609, 0, 262146, 196610, 0, 262148, 196611, 0, 262146, 196612, 0, 262146, 196613, 0, 262146, 196614, 0, 262146, 196615, 0, 262147, 196616, 0, 262146, 196617, 0, 262146, 196618, 0, 262146, 196619, 0, 262146, 196620, 0, 262147, 196621, 0, 262146, 196622, 0, 262146, 196623, 0, 262146, 196624, 0, 262146, 196625, 0, 262146, 196626, 0, 262146, 196627, 0, 262146, 196628, 0, 262146, 196629, 0, 262146, 196630, 0, 262146, 196631, 0, 262146, 196632, 0, 262146, 196633, 0, 262146, 196634, 0, 262146, 196635, 0, 262146, 196636, 0, 262146, 196637, 0, 262146, 196638, 0, 262146, 196639, 0, 262146, 262144, 0, 262146, 262145, 0, 262146, 262146, 0, 262146, 262147, 0, 262146, 262148, 0, 262146, 262149, 0, 262146, 262150, 0, 262146, 262151, 0, 262149, 262152, 0, 262146, 262153, 0, 262146, 262154, 0, 262146, 262155, 0, 262146, 262156, 0, 262146, 262157, 0, 262146, 262158, 0, 262146, 262159, 0, 262146, 262160, 0, 262146, 262161, 0, 262148, 262162, 0, 262146, 262163, 0, 262146, 262164, 0, 262146, 262165, 0, 262146, 262166, 0, 262146, 262167, 0, 262146, 262168, 0, 262146, 262169, 0, 262146, 262170, 0, 262146, 262171, 0, 262146, 262172, 0, 262149, 262173, 0, 262146, 262174, 0, 262146, 262175, 0, 262146, 327680, 0, 262146, 327681, 0, 262146, 327682, 0, 262146, 327683, 0, 262149, 327684, 0, 262146, 327685, 0, 262146, 327686, 0, 262146, 327687, 0, 262146, 327688, 0, 262146, 327689, 0, 262146, 327690, 0, 262146, 327691, 0, 262146, 327692, 0, 262148, 327693, 0, 262146, 327694, 0, 262146, 327695, 0, 262149, 327696, 0, 262146, 327697, 0, 262146, 327698, 0, 262146, 327699, 0, 262146, 327700, 0, 262146, 327701, 0, 262146, 327702, 0, 262146, 327703, 0, 262146, 327704, 0, 262146, 327705, 0, 262146, 327706, 0, 262146, 327707, 0, 262146, 327708, 0, 262146, 327709, 0, 262146, 327710, 0, 262146, 327711, 0, 262146, 393216, 0, 262146, 393217, 0, 262146, 393218, 0, 262146, 393219, 0, 262146, 393220, 0, 262146, 393221, 0, 262146, 393222, 0, 262146, 393223, 0, 262146, 393224, 0, 262146, 393225, 0, 262146, 393226, 0, 262146, 393227, 0, 262146, 393228, 0, 262146, 393229, 0, 262146, 393230, 0, 262146, 393231, 0, 262146, 393232, 0, 262146, 393233, 0, 262146, 393234, 0, 262146, 393235, 0, 262146, 393236, 0, 262147, 393237, 0, 262146, 393238, 0, 262146, 393239, 0, 262146, 393240, 0, 262146, 393241, 0, 262146, 393242, 0, 262149, 393243, 0, 262146, 393244, 0, 262146, 393245, 0, 262146, 393246, 0, 262148, 393247, 0, 262146, 458752, 0, 262146, 458753, 0, 262146, 458754, 0, 262146, 458755, 0, 262146, 458756, 0, 262146, 458757, 0, 262146, 458758, 0, 262146, 458759, 0, 262146, 458760, 0, 262146, 458761, 0, 262146, 458762, 0, 262149, 458763, 0, 262146, 458764, 0, 262146, 458765, 0, 262146, 458766, 0, 262146, 458767, 0, 262146, 458768, 0, 262146, 458769, 0, 262146, 458770, 0, 262146, 458771, 0, 262146, 458772, 0, 262146, 458773, 0, 262146, 458774, 0, 262146, 458775, 0, 262148, 458776, 0, 262146, 458777, 0, 262146, 458778, 0, 262146, 458779, 0, 262146, 458780, 0, 262146, 458781, 0, 262146, 458782, 0, 262146, 458783, 0, 262146, 524288, 0, 262146, 524289, 0, 262146, 524290, 0, 262146, 524291, 0, 262146, 524292, 0, 262146, 524293, 0, 262148, 524294, 0, 262146, 524295, 0, 262146, 524296, 0, 262146, 524297, 0, 262147, 524298, 0, 262146, 524299, 0, 262146, 524300, 0, 262146, 524301, 0, 262146, 524302, 0, 262146, 524303, 0, 262146, 524304, 0, 262146, 524305, 0, 262146, 524306, 0, 262146, 524307, 0, 262146, 524308, 0, 262146, 524309, 0, 262146, 524310, 0, 262146, 524311, 0, 262146, 524312, 0, 262146, 524313, 0, 262146, 524314, 0, 262146, 524315, 0, 262146, 524316, 0, 262146, 524317, 0, 262146, 524318, 0, 262146, 524319, 0, 262146, 589824, 0, 262147, 589825, 0, 262146, 589826, 0, 262146, 589827, 0, 262146, 589828, 0, 262146, 589829, 0, 262146, 589830, 0, 262146, 589831, 0, 262146, 589832, 0, 262146, 589833, 0, 262146, 589834, 0, 262146, 589835, 0, 262146, 589836, 0, 262146, 589837, 0, 262146, 589838, 0, 262146, 589839, 0, 262146, 589840, 0, 262146, 589841, 0, 262146, 589842, 0, 262146, 589843, 0, 262146, 589844, 0, 262146, 589845, 0, 262146, 589846, 0, 262146, 589847, 0, 262146, 589848, 0, 262146, 589849, 0, 262146, 589850, 0, 262146, 589851, 0, 262146, 589852, 0, 262146, 589853, 0, 262146, 589854, 0, 262146, 589855, 0, 262146, 655360, 0, 262146, 655361, 0, 262146, 655362, 0, 262146, 655363, 0, 262146, 655364, 0, 262146, 655365, 0, 262146, 655366, 0, 262146, 655367, 0, 262146, 655368, 0, 262146, 655369, 0, 262146, 655370, 0, 262146, 655371, 0, 262146, 655372, 0, 262146, 655373, 0, 262146, 655374, 0, 262146, 655375, 0, 262146, 655376, 0, 262146, 655377, 0, 262146, 655378, 0, 262147, 655379, 0, 262146, 655380, 0, 262146, 655381, 0, 262146, 655382, 0, 262146, 655383, 0, 262146, 655384, 0, 262146, 655385, 0, 262146, 655386, 0, 262146, 655387, 0, 262146, 655388, 0, 262146, 655389, 0, 262146, 655390, 0, 262146, 655391, 0, 262146, 720896, 0, 262146, 720897, 0, 262146, 720898, 0, 262148, 720899, 0, 262146, 720900, 0, 262146, 720901, 0, 262146, 720902, 0, 262146, 720903, 0, 262146, 720904, 0, 262146, 720905, 0, 262146, 720906, 0, 262146, 720907, 0, 262146, 720908, 0, 262146, 720909, 0, 262146, 720910, 0, 262146, 720911, 0, 262146, 720912, 0, 262146, 720913, 0, 262146, 720914, 0, 262146, 720915, 0, 262146, 720916, 0, 262146, 720917, 0, 262146, 720918, 0, 262146, 720919, 0, 262146, 720920, 0, 262146, 720921, 0, 262146, 720922, 0, 262146, 720923, 0, 262146, 720924, 0, 262146, 720925, 0, 262146, 720926, 0, 262146, 720927, 0, 262146, 786432, 0, 262146, 786433, 0, 262146, 786434, 0, 262146, 786435, 0, 262146, 786436, 0, 262146, 786437, 0, 262146, 786438, 0, 262146, 786439, 0, 262146, 786440, 0, 262146, 786441, 0, 262146, 786442, 0, 262146, 786443, 0, 262148, 786444, 0, 262146, 786445, 0, 262146, 786446, 0, 262146, 786447, 0, 262146, 786448, 0, 262146, 786449, 0, 262146, 786450, 0, 262146, 786451, 0, 262146, 786452, 0, 262146, 786453, 0, 262148, 786454, 0, 262146, 786455, 0, 262146, 786456, 0, 262146, 786457, 0, 262149, 786458, 0, 262146, 786459, 0, 262146, 786460, 0, 262147, 786461, 0, 262146, 786462, 0, 262146, 786463, 0, 262146, 851968, 0, 262146, 851969, 0, 262146, 851970, 0, 262146, 851971, 0, 262146, 851972, 0, 262146, 851973, 0, 262146, 851974, 0, 262147, 851975, 0, 262146, 851976, 0, 262146, 851977, 0, 262146, 851978, 0, 262146, 851979, 0, 262146, 851980, 0, 262146, 851981, 0, 262146, 851982, 0, 262149, 851983, 0, 262146, 851984, 0, 262146, 851985, 0, 262146, 851986, 0, 262146, 851987, 0, 262146, 851988, 0, 262146, 851989, 0, 262146, 851990, 0, 262146, 851991, 0, 262146, 851992, 0, 262146, 851993, 0, 262146, 851994, 0, 262146, 851995, 0, 262146, 851996, 0, 262146, 851997, 0, 262146, 851998, 0, 262146, 851999, 0, 262146, 917504, 0, 262146, 917505, 0, 262146, 917506, 0, 262147, 917507, 0, 262146, 917508, 0, 262146, 917509, 0, 262146, 917510, 0, 262146, 917511, 0, 262146, 917512, 0, 262146, 917513, 0, 262146, 917514, 0, 262146, 917515, 0, 262146, 917516, 0, 262146, 917517, 0, 262146, 917518, 0, 262146, 917519, 0, 262146, 917520, 0, 262146, 917521, 0, 262146, 917522, 0, 262146, 917523, 0, 262146, 917524, 0, 262148, 917525, 0, 262146, 917526, 0, 262146, 917527, 0, 262146, 917528, 0, 262146, 917529, 0, 262146, 917530, 0, 262146, 917531, 0, 262146, 917532, 0, 262146, 917533, 0, 262146, 917534, 0, 262146, 917535, 0, 262146, 983040, 0, 262146, 983041, 0, 262146, 983042, 0, 262146, 983043, 0, 262146, 983044, 0, 262149, 983045, 0, 262146, 983046, 0, 262146, 983047, 0, 262146, 983048, 0, 262146, 983049, 0, 262146, 983050, 0, 262146, 983051, 0, 262146, 983052, 0, 262146, 983053, 0, 262148, 983054, 0, 262146, 983055, 0, 262146, 983056, 0, 262146, 983057, 0, 262146, 983058, 0, 262146, 983059, 0, 262146, 983060, 0, 262146, 983061, 0, 262146, 983062, 0, 262146, 983063, 0, 262146, 983064, 0, 262146, 983065, 0, 262146, 983066, 0, 262146, 983067, 0, 262146, 983068, 0, 262146, 983069, 0, 262148, 983070, 0, 262146, 983071, 0, 262146, 1048576, 0, 262146, 1048577, 0, 262146, 1048578, 0, 262146, 1048579, 0, 262146, 1048580, 0, 262146, 1048581, 0, 262146, 1048582, 0, 262148, 1048583, 0, 262146, 1048584, 0, 262146, 1048585, 0, 262146, 1048586, 0, 262146, 1048587, 0, 262146, 1048588, 0, 262146, 1048589, 0, 262146, 1048590, 0, 262146, 1048591, 0, 262146, 1048592, 0, 262147, 1048593, 0, 262146, 1048594, 0, 262146, 1048595, 0, 262146, 1048596, 0, 262146, 1048597, 0, 262146, 1048598, 0, 262148, 1048599, 0, 262146, 1048600, 0, 262146, 1048601, 0, 262146, 1048602, 0, 262146, 1048603, 0, 262146, 1048604, 0, 262146, 1048605, 0, 262146, 1048606, 0, 262146, 1048607, 0, 262146, 1114112, 0, 262146, 1114113, 0, 262146, 1114114, 0, 262146, 1114115, 0, 262146, 1114116, 0, 262146, 1114117, 0, 262146, 1114118, 0, 262146, 1114119, 0, 262146, 1114120, 0, 262146, 1114121, 0, 262146, 1114122, 0, 262146, 1114123, 0, 262146, 1114124, 0, 262146, 1114125, 0, 262146, 1114126, 0, 262146, 1114127, 0, 262146, 1114128, 0, 262146, 1114129, 0, 262146, 1114130, 0, 262146, 1114131, 0, 262146, 1114132, 0, 262146, 1114133, 0, 262146, 1114134, 0, 262146, 1114135, 0, 262146, 1114136, 0, 262146, 1114137, 0, 262146, 1114138, 0, 262148, 1114139, 0, 262146, 1114140, 0, 262146, 1114141, 0, 262146, 1114142, 0, 262146, 1114143, 0, 262146, 1179648, 0, 262146, 1179649, 0, 262146, 1179650, 0, 262149, 1179651, 0, 262146, 1179652, 0, 262146, 1179653, 0, 262146, 1179654, 0, 262146, 1179655, 0, 262146, 1179656, 0, 262146, 1179657, 0, 262146, 1179658, 0, 262146, 1179659, 0, 262146, 1179660, 0, 262146, 1179661, 0, 262149, 1179662, 0, 262146, 1179663, 0, 262146, 1179664, 0, 262146, 1179665, 0, 262146, 1179666, 0, 262146, 1179667, 0, 262146, 1179668, 0, 262146, 1179669, 0, 262146, 1179670, 0, 262146, 1179671, 0, 262146, 1179672, 0, 262146, 1179673, 0, 262146, 1179674, 0, 262146, 1179675, 0, 262146, 1179676, 0, 262146, 1179677, 0, 262146, 1179678, 0, 262146, 1179679, 0, 262146 )

[node name="Water" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 393217, 1, 0, 393217, 2, 0, 393217, 3, 0, 393217, 4, 0, 393217, 5, 0, 393217, 6, 0, 393217, 7, 0, 393217, 8, 0, 393217, 9, 0, 393217, 10, 0, 393217, 11, 0, 393217, 12, 0, 393217, 13, 0, 393217, 14, 0, 393217, 15, 0, 393217, 16, 0, 393217, 17, 0, 393217, 18, 0, 393217, 19, 0, 393217, 20, 0, 393217, 21, 0, 393217, 22, 0, 393217, 23, 0, 393217, 24, 0, 393217, 25, 0, 393217, 26, 0, 393217, 27, 0, 393217, 28, 0, 393217, 29, 0, 393217, 30, 0, 393217, 31, 0, 393217, 65536, 0, 458753, 65537, 0, 458753, 65538, 0, 458753, 65539, 0, 458753, 65540, 0, 458753, 65541, 0, 458753, 65542, 0, 458753, 65543, 0, 458753, 65544, 0, 458753, 65545, 0, 458753, 65546, 0, 458753, 65547, 0, 458753, 65548, 0, 458753, 65549, 0, 458753, 65550, 0, 524295, 65551, 0, 458753, 65552, 0, 458753, 65553, 0, 458753, 65554, 0, 458753, 65555, 0, 458753, 65556, 0, 458753, 65557, 0, 458753, 65558, 0, 458753, 65559, 0, 458753, 65560, 0, 458753, 65561, 0, 458753, 65562, 0, 458753, 65563, 0, 458753, 65564, 0, 458753, 65565, 0, 458753, 65566, 0, 524288, 65567, 0, 393217, 131086, 0, 393219, 131102, 0, 393216, 131103, 0, 393217, 196622, 0, 393219, 196638, 0, 393216, 196639, 0, 393217, 262158, 0, 393219, 262174, 0, 393216, 262175, 0, 393217, 327694, 0, 393219, 327710, 0, 393216, 327711, 0, 393217, 393230, 0, 393219, 393246, 0, 393216, 393247, 0, 393217, 458766, 0, 393219, 458782, 0, 393216, 458783, 0, 393217, 524301, 0, 327680, 524302, 0, 524293, 524303, 0, 327682, 524318, 0, 458752, 524319, 0, 458753, 589837, 0, 393216, 589838, 0, 393217, 589839, 0, 393218, 655373, 0, 458752, 655374, 0, 524295, 655375, 0, 458754, 655390, 0, 327680, 655391, 0, 327681, 720910, 0, 393219, 720926, 0, 393216, 720927, 0, 393217, 786446, 0, 393219, 786462, 0, 393216, 786463, 0, 393217, 851982, 0, 393219, 851998, 0, 393216, 851999, 0, 393217, 917518, 0, 393219, 917534, 0, 393216, 917535, 0, 393217, 983054, 0, 393219, 983070, 0, 393216, 983071, 0, 393217, 1048590, 0, 393219, 1048606, 0, 393216, 1048607, 0, 393217, 1114112, 0, 327681, 1114113, 0, 327681, 1114114, 0, 327681, 1114115, 0, 327681, 1114116, 0, 327681, 1114117, 0, 327681, 1114118, 0, 327681, 1114119, 0, 327681, 1114120, 0, 327681, 1114121, 0, 327681, 1114122, 0, 327681, 1114123, 0, 327681, 1114124, 0, 327681, 1114125, 0, 327681, 1114126, 0, 524293, 1114127, 0, 327681, 1114128, 0, 327681, 1114129, 0, 327681, 1114130, 0, 327681, 1114131, 0, 327681, 1114132, 0, 327681, 1114133, 0, 327681, 1114134, 0, 327681, 1114135, 0, 327681, 1114136, 0, 327681, 1114137, 0, 327681, 1114138, 0, 327681, 1114139, 0, 327681, 1114140, 0, 327681, 1114141, 0, 327681, 1114142, 0, 524289, 1114143, 0, 393217, 1179648, 0, 393217, 1179649, 0, 393217, 1179650, 0, 393217, 1179651, 0, 393217, 1179652, 0, 393217, 1179653, 0, 393217, 1179654, 0, 393217, 1179655, 0, 393217, 1179656, 0, 393217, 1179657, 0, 393217, 1179658, 0, 393217, 1179659, 0, 393217, 1179660, 0, 393217, 1179661, 0, 393217, 1179662, 0, 393217, 1179663, 0, 393217, 1179664, 0, 393217, 1179665, 0, 393217, 1179666, 0, 393217, 1179667, 0, 393217, 1179668, 0, 393217, 1179669, 0, 393217, 1179670, 0, 393217, 1179671, 0, 393217, 1179672, 0, 393217, 1179673, 0, 393217, 1179674, 0, 393217, 1179675, 0, 393217, 1179676, 0, 393217, 1179677, 0, 393217, 1179678, 0, 393217, 1179679, 0, 393217 )

[node name="Path" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131075, 0, 262144, 131082, 0, 196612, 131089, 0, 1, 131096, 0, 7, 196608, 0, 720899, 196609, 0, 720899, 196610, 0, 720899, 196611, 0, 720899, 196612, 0, 720899, 196613, 0, 720899, 196614, 0, 720899, 196615, 0, 720899, 196616, 0, 720899, 196617, 0, 720899, 196618, 0, 851971, 196619, 0, 720899, 196620, 0, 720899, 196621, 0, 720899, 196622, 0, 262150, 196623, 0, 720899, 196624, 0, 720899, 196625, 0, 720899, 196626, 0, 720899, 196627, 0, 720899, 196628, 0, 720899, 196629, 0, 720899, 196630, 0, 720899, 196631, 0, 720899, 196632, 0, 851972, 196636, 0, 1, 262145, 0, 851968, 262151, 0, 786433, 262154, 0, 851975, 262166, 0, 851970, 262168, 0, 786437, 262171, 0, 851975, 327688, 0, 851969, 327692, 0, 1, 327697, 0, 851975, 327699, 0, 1, 327704, 0, 786437, 393232, 0, 196612, 393240, 0, 786437, 393241, 0, 1, 458752, 0, 720899, 458753, 0, 720899, 458754, 0, 720899, 458755, 0, 720899, 458756, 0, 720899, 458757, 0, 720899, 458758, 0, 720899, 458759, 0, 720899, 458760, 0, 720899, 458761, 0, 720899, 458762, 0, 720899, 458763, 0, 720899, 458764, 0, 720899, 458765, 0, 720899, 458766, 0, 262150, 458767, 0, 720899, 458768, 0, 851971, 458769, 0, 720899, 458770, 0, 720899, 458771, 0, 720899, 458772, 0, 720899, 458773, 0, 720899, 458774, 0, 720899, 458775, 0, 720899, 458776, 0, 851971, 458777, 0, 720899, 458778, 0, 720903, 524293, 0, 1, 524307, 0, 851969, 524313, 0, 720897, 524314, 0, 786437, 524317, 0, 262145, 589825, 0, 851970, 589828, 0, 851975, 589841, 0, 851975, 589850, 0, 786435, 589851, 0, 720899, 589852, 0, 720899, 589853, 0, 720899, 589854, 0, 720899, 589855, 0, 720899, 655364, 0, 7, 655370, 0, 786432, 655379, 0, 786433, 655386, 0, 786437, 720896, 0, 720899, 720897, 0, 720899, 720898, 0, 720899, 720899, 0, 720899, 720900, 0, 851971, 720901, 0, 720899, 720902, 0, 720899, 720903, 0, 720899, 720904, 0, 720899, 720905, 0, 720899, 720906, 0, 720899, 720907, 0, 720899, 720908, 0, 720899, 720909, 0, 720899, 720910, 0, 262150, 720911, 0, 720899, 720912, 0, 720899, 720913, 0, 720899, 720914, 0, 720899, 720915, 0, 720899, 720916, 0, 720899, 720917, 0, 720899, 720918, 0, 720899, 720919, 0, 720899, 720920, 0, 786436, 720921, 0, 720899, 720922, 0, 786439, 720924, 0, 851970, 786454, 0, 851975, 786456, 0, 786437, 851980, 0, 851975, 851981, 0, 851968, 851985, 0, 851969, 851992, 0, 786437, 851994, 0, 786432, 917505, 0, 851968, 917508, 0, 786432, 917510, 0, 851970, 917513, 0, 196613, 917528, 0, 786437, 983040, 0, 720899, 983041, 0, 720899, 983042, 0, 720899, 983043, 0, 720899, 983044, 0, 720899, 983045, 0, 720899, 983046, 0, 720899, 983047, 0, 720899, 983048, 0, 720899, 983049, 0, 851971, 983050, 0, 720899, 983051, 0, 720899, 983052, 0, 720899, 983053, 0, 720899, 983054, 0, 262150, 983055, 0, 720899, 983056, 0, 720899, 983057, 0, 720899, 983058, 0, 720899, 983059, 0, 720899, 983060, 0, 720899, 983061, 0, 720899, 983062, 0, 720899, 983063, 0, 720899, 983064, 0, 786439, 983069, 0, 851975, 1048586, 0, 1, 1048596, 0, 786432 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="CanvasLayer/MarginContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="FirstPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SecondPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="ThirdPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="FourthPath" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1048, 304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 48, 0 )
shape = SubResource( 5 )

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
